<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accept_disclaimer">I understand and agree to the above conditions of use.</string>
    <string name="action_settings">New Calculation</string>
    <string name="actual_pump_hb">Actual Pump Hb</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="anaesthetic_fluid_during_prebypass_period_litres">Anaesthetic Fluid during prebypass period (Litres)</string>
    <string name="app_name">Blood App</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="cardiac_or_non_cardiac">Cardiac or Non-Cardiac</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_details">Contact Details including email address</string>
    <string name="country">Country</string>
    <string name="disclaimer">The creators of this application do not take responsibility for the accuracy of the calculations in this application. They are meant as a guide to the approximate haemoglobin concentrations predicted on cardiopulmonary bypass and after acute haemorrhage and may serve as an estimation of the number of units of packed red blood cells that need to be ordered to ensure patient safety during surgery and acute trauma</string>
    <string name="disclaimer_header">Disclaimer</string>
    <string name="disclaimer_weight">The accuracy of the calculation is not guaranteed if the weight is less than 35kg</string>
    <string name="email">Email</string>
    <string name="first_pass_blood_removed_on_pump_litres">First Pass Blood Removed on Pump (Litres)</string>
    <string name="gender">Gender</string>
    <string name="height">Height (m)</string>
    <string name="history">History</string>
    <string name="hospital">Hospital</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="none_card_blood_volume">Blood Volume</string>
    <string name="none_card_expected_loss">Expected or Actual Blood loss (Litres)</string>
    <string name="none_card_lab_hb">Pre Operative Lab Hb</string>
    <string name="none_card_required_post_op">Required Post Op Hb</string>
    <string name="note_blood_volumes">Patients with increased blood volumes, such as found in mitral and tricuspid valve disease, may have actual pump Hb higher than predicted.In addition, Patients in heart failure on diuretic or inotropic therapy may have reduced blood volumes and may have a lower pump Hb than predicted.</string>
    <string name="ok">OK</string>
    <string name="operation">Operation</string>
    <string name="password">Password</string>
    <string name="patient_age">Age</string>
    <string name="patient_age_hint">Patient age</string>
    <string name="patient_anaesthetic_fluid">Anaesthetic Fluid during prebypass period (Litres)</string>
    <string name="patient_calculate">Calculate</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_first_pass_blood">First Pass Blood Removed on Pump (Litres)</string>
    <string name="patient_first_pass_blood_hint">1.5</string>
    <string name="patient_gender">Gender</string>
    <string name="patient_gender_female">Female</string>
    <string name="patient_gender_hint">Patient gender</string>
    <string name="patient_gender_male">Male</string>
    <string name="patient_haemoglobin_level">Preop Lab Haemoglobin Level (g/dl)</string>
    <string name="patient_haemoglobin_level_hint">Patient operation</string>
    <string name="patient_height">Height (m)</string>
    <string name="patient_height_hint">Patient height</string>
    <string name="patient_operation">Operation</string>
    <string name="patient_operation_hint">Patient operation</string>
    <string name="patient_prime_volume">Prime Volume of bypass circuit (Litres)</string>
    <string name="patient_rbc">Red Blood Cells (RBC)</string>
    <string name="patient_required_hb">Required Hb on Pump</string>
    <string name="patient_urine_output">Urine Output during prebypass period (Litres)</string>
    <string name="patient_weight">Weight (Kg)</string>
    <string name="patient_weight_hint">Patient weight</string>
    <string name="position">Position</string>
    <string name="predicted_pump_hb">Predicted Pump Hb</string>
    <string name="preop_laboratory_haemoglobin_level_gdl">Preop Laboratory Haemoglobin Level (g/dl)</string>
    <string name="prev">Previous</string>
    <string name="prime_volume_of_bypass_circuit_litres">Prime Volume of bypass circuit (Litres)</string>
    <string name="profession">Profession</string>
    <string name="register">Register</string>
    <string name="review">Review</string>
    <string name="splash_text">Predicting Haemoglobin Concentrations on Cardiopulmonary Bypass and after Acute Blood Loss</string>
    <string name="submit">Submit</string>
    <string name="title_activity_calculation_history">Calculation History</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_register">Regist</string>
    <string name="title_activity_summary">Summary</string>
    <string name="urine_output_during_prebypass_period_litres">Urine Output during prebypass period (Litres)</string>
    <string name="username">Username</string>
    <string name="wait">Please wait…</string>
    <string name="weight">Weight (Kg)</string>
</resources>
