<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/WizardPageContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView style="@style/WizardPageTitle" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:text="@string/patient_age" style="@style/WizardFormLabel" />
        <EditText android:id="@id/patient_age" android:saveEnabled="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:inputType="number" />
        <TextView android:text="@string/patient_gender" style="@style/WizardFormLabel" />
        <Switch android:id="@id/patient_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/patient_gender_male" android:textOff="@string/patient_gender_female" />
    </LinearLayout>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disclaimer_weight" />
</LinearLayout>