<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register" style="@style/WizardPageTitle" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" style="@style/WizardFormLabel" />
        <EditText android:id="@id/ed_name" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/country" style="@style/WizardFormLabel" />
        <Spinner android:entries="@array/country_array" android:id="@id/ed_country" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/WizardFormLabel" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hospital" style="@style/WizardFormLabel" />
        <EditText android:id="@id/ed_hospital" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/position" style="@style/WizardFormLabel" />
        <EditText android:id="@id/ed_position" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profession" style="@style/WizardFormLabel" />
        <EditText android:id="@id/ed_profession" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" style="@style/WizardFormLabel" />
        <EditText android:id="@id/ed_email" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" style="@style/WizardFormLabel" />
        <EditText android:layout_gravity="center_horizontal" android:id="@id/ed_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:maxLength="100" android:inputType="textPassword" />
        <TextView android:textSize="@dimen/summary_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm_password" style="@style/WizardFormLabel" />
        <EditText android:layout_gravity="center_horizontal" android:id="@id/ed_confirm_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:maxLength="100" android:inputType="textPassword" />
        <Button android:textSize="@dimen/summary_text_size" android:layout_gravity="right" android:id="@id/btn_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit" style="@style/WizardFormLabel" />
    </LinearLayout>
</ScrollView>