<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Summary" style="@style/WizardPageTitle" />
    <TextView android:textSize="@dimen/summary_text_size" android:textStyle="normal" android:id="@id/tv_age" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/patient_age" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_weight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/patient_weight" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_height" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/patient_height" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_operation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/operation" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_predicted_pump_hb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/predicted_pump_hb" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_blood_volume" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_number_of_rbc_required" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_total_hb" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/summary_text_size" android:id="@id/tv_actual_pump_hb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/actual_pump_hb" />
    <EditText android:layout_gravity="center_horizontal" android:id="@id/ed_actual_post_hb" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:id="@id/btn_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit" />
</LinearLayout>