<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/summary_text_size" android:textStyle="bold" android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disclaimer_header" style="@style/WizardPageTitle" />
    <TextView android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer" />
    <CheckBox android:gravity="center" android:id="@id/chk_accept_disclaimer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accept_disclaimer" />
</LinearLayout>